fixing alignmen

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ label, table, caption {
 
 html {
   width: 100%;
-  font-family: Lucida Console,Lucida Sans Typewriter,monaco,Bitstream Vera Sans Mono,monospace; }
+  font-family: Lucida Console,Lucida Sans Typewriter,monaco,Bitstream Vera Sans Mono; }
   html body {
     /* Header */
     /* General main template */
